[package]
name = "yourctools"
authors = ["Chris H. Meyer <christian.h.meyer@t-online.de>"]
categories = ["Multimedia"]
keywords = ["audio", "usb", "midi"]
description = "Free Software Implementation of dspMixFx"
license = "AGPLv3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.5.3", features=["derive"] }
midir = "0.9"
vizia = "^0.2"
log = "0.4"
fern = "0.7"